--- a/parcial_2/actividad_04.css
+++ b/parcial_2/actividad_04.css
@@ -1,45 +1,48 @@
+h1 {
+    border: 2px solid mediumseagreen;
+    font-family: "Poppins", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: italic;
+    font-variation-settings:
+        "wght" 800;
+    color: navy;
+}
 
-h1{
-    border: 2px solid tomato;
-    font-family: "Handjet", sans-serif;
+ul {
+    border-width: 4px;
+    border-style: dashed;
+    border-color: orange;
+}
+
+li {
+    border-width: 2px;
+    border-style: dotted;
+    border-color: teal;
+    color: darkslategray;
+}
+
+p {
+    border-radius: 12px;
+    border-width: 3px;
+    border-style: double;
+    border-color: indigo;
+    background-color: lavender;
+    color: #333;
+}
+
+body {
+    background-color: #f0f8ff; /* AliceBlue */
+    background-size: cover;
+    background-image: url("new-background.png"); /* Cambia el nombre si tienes otro fondo */
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     font-variation-settings:
-        "ELGR" 1,
-        "ELSH" 2;
-}
-
-ul{
-    border-width: 5px;
-    border-style: dotted;
-    border-color: dodgerblue;
-}
-
-li{
-    border-width: 2.5px;
-    border-style: dashed;
-    border-color: lightcoral;
-}
-
-p{
-    border-radius: 10px;
-    border-width: 2.5px;
-    border-style: solid;
-    border-color: darkmagenta;
-}
-
-body{
-    background-color: gray;
-    background-size: 560px;
-    background-image: url("vk4slai8vcf81.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    font-family: "Doto", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 900;
-    font-style: normal;
-    font-variation-settings:
-        "ROND" 0;
+        "wght" 700;
+    color: #222;
 }
